新建文件夹src，包含头文件和源文件

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,17 @@
 *.exe
 *.out
 *.app
+
+# VS
+*.ipch
+*.suo
+*.db
+*.sqlite
+*.json
+*.sln
+*.filters
+*.vcxproj
+*.user
+*.opendb
+*.db-shm
+*.db-wal
