Added note_4.cpp and out_4.txt.

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@
 *.ilk
 *.log
 /x64/Debug/Hello-GitHub.vcxproj.FileListAbsolute.txt
+/Hello-GitHub/x64/Debug/Hello-GitHub.vcxproj.FileListAbsolute.txt
